# jira-agent

./: README.md  pyproject.toml
jira_agent/: __init__.py  agent.py  cli.py  client.py
