[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-agent-ai"
version = "0.1.0"
description = "AI-powered Jira agent: create, triage, and link issues from natural language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
jira-agent = "jira_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jira_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
